# stm32

./: .env.example  .gitattributes  .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  EXAMPLES.md  EXECUTION_PLAN.md  IMPLEMENTATION_PLAN.md  INGESTION_CHECKLIST.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  TROUBLESHOOTING.md  mcp-config.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.claude/: mcp-network.json  mcp.json  settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: _mcp_template.md  debug.md  firmware-core.md  hardware-design.md  peripheral-graphics.md  power.md  (+4 more)
agents/: bootloader-programming.md  bootloader.md  debug.md  firmware-core.md  firmware.md  hardware-design.md  peripheral-analog.md  peripheral-comm.md  peripheral-graphics.md  power-management.md  power.md  router.md  safety-certification.md  safety.md  security.md  triage.md
commands/: stm32-setup.md
docs/: ADVANCED_TOOLS.md  AGENT_MCP_INTEGRATION.md  AGENT_QUICK_REFERENCE.md  AGENT_ROUTING_SPECIFICATION.md  ARCHITECTURE.md  ARCHITECTURE_BEST_PRACTICES.md  CHUNKING.md  CLAUDE_CODE_INTEGRATION.md  EXECUTION_PLAN.md  EXECUTION_SPECIFICATIONS.md  GETTING_STARTED.md  INDEX.md  INFRASTRUCTURE.md  INGESTION.md  MCP_SERVER.md  QUICK_START.md  RESOURCES.md  STM32_DOCUMENT_CHUNKING_STRATEGY.md  STORAGE.md  TESTING.md  UNIVERSAL_PLATFORM_PLAN.md
examples/: README.md  config.env.example  mcp-network.json.example  mcp.json.example
markdowns/: an1709-emc-design-guide-for-stm8-stm32-and-legacy-mcus-stmicroelectronics.md  an2639-soldering-recommendations-and-package-information-for-leadfree-ecopack2-mcus-and-mpus-stmicroelectronics.md  an2867-guidelines-for-oscillator-design-on-stm8afals-and-stm32-mcusmpus-stmicroelectronics.md  an3126-audio-and-waveform-generation-using-the-dac-in-stm32-products-stmicroelectronics.md  an3155-usart-protocol-used-in-the-stm32-bootloader-stmicroelectronics.md  an3156-usb-dfu-protocol-used-in-the-stm32-bootloader-stmicroelectronics.md  an4013-introduction-to-timers-for-stm32-mcus-stmicroelectronics.md  an4230-introduction-to-random-number-generation-validation-using-the-nist-statistical-test-suite-for-stm32-mcus-and-mpus-stmicroelectronics.md  an4277-how-to-use-pwm-shutdown-for-motor-control-and-digital-power-conversion-on-stm32-mcus-stmicroelectronics.md  an4286-spi-protocol-used-in-the-stm32-bootloader-stmicroelectronics.md  an4323-getting-started-with-stemwin-library-stmicroelectronics.md  an4566-how-to-extend-the-dac-performance-on-stm32-mcus-stmicroelectronics.md  an4655-virtually-increasing-the-number-of-serial-communication-peripherals-in-stm32-applications-stmicroelectronics.md  an4759-introduction-to-using-the-hardware-realtime-clock-rtc-and-the-tamper-management-unit-tamp-with-stm32-mcus-stmicroelectronics.md  an4776-generalpurpose-timer-cookbook-for-stm32-microcontrollers-stmicroelectronics.md  an4838-introduction-to-memory-protection-unit-management-on-stm32-mcus-stmicroelectronics.md  an4841-digital-signal-processing-for-stm32-microcontrollers-using-cmsis-stmicroelectronics.md  an4861-introduction-to-lcdtft-display-controller-ltdc-on-stm32-mcus-stmicroelectronics.md  an4865-lowpower-timer-lptim-applicative-use-cases-on-stm32-mcus-and-mpus-stmicroelectronics.md  an4899-stm32-microcontroller-gpio-hardware-settings-and-lowpower-consumption-stmicroelectronics.md  an4908-getting-started-with-usart-automatic-baud-rater-detection-for-stm32-mcus-stmicroelectronics.md  an4989-stm32-microcontroller-debug-toolbox-stmicroelectronics.md  an4991-how-to-wake-up-an-stm32-microcontroller-from-lowpower-mode-with-the-usart-or-the-lpuart-stmicroelectronics.md  an5014-stm32h7x3-smart-power-management-expansion-package-for-stm32cube-stmicroelectronics.md  an5020-introduction-to-digital-camera-interface-dcmi-for-stm32-mcus-stmicroelectronics.md  an5027-interfacing-pdm-digital-microphones-using-stm32-mcus-and-mpus-stmicroelectronics.md  an5073-receiving-spdif-audio-stream-with-the-stm32f4f7h7-series-stmicroelectronics.md  an5156-introduction-to-security-for-stm32-mcus-stmicroelectronics.md  an5200-getting-started-with-the-stm32h7-mcu-sdmmc-host-controller-stmicroelectronics 1.md  an5224-introduction-to-dmamux-for-stm32-mcus-stmicroelectronics.md  an5225-introduction-to-usb-typec-power-delivery-for-stm32-mcus-and-mpus-stmicroelectronics.md  an5337-guidelines-for-estimating-stm32h7-mcus-lifetime-stmicroelectronics.md  an5348-introduction-to-fdcan-peripherals-for-stm32-mcus-stmicroelectronics.md  an5405-how-to-use-fdcan-bootloader-protocol-on-stm32-mcus-stmicroelectronics.md  an5419-getting-started-with-stm32h723733-stm32h725735-and-stm32h730-value-line-hardware-development-stmicroelectronics.md  an5507-how-to-use-crc-to-check-the-integrity-of-the-internal-flash-memory-on-stm32h7-mcus-stmicroelectronics.md  an5543-guidelines-for-enhanced-spi-communication-on-stm32-mcus-and-mpus-stmicroelectronics.md  an5612-esd-protection-of-stm32-mcus-and-mpus-stmicroelectronics.md  an5690-how-to-use-vrefbuf-peripheral-on-stm32-mcus-and-mpus-stmicroelectronics.md  an5952-how-to-use-cmake-in-stm32cubeide-stmicroelectronics.md  (+7 more)
mcp_server/: __init__.py  __main__.py  claude_md_generator.py  config.py  database_manager.py  ingestion.py  py.typed  query_expansion.py  query_parser.py  reranker.py  server.py
pipeline/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  chunker.py  example_usage.py  test_chunking_pipeline.py  validator.py
release-artifacts/: build-info.json  chromadb-manifest.json
scripts/: README.md  __init__.py  build_release_database.py  download_db.py  export_chunks.py  ingest_docs.py  package_db.py  run_tests.py  search.py  setup.py  start_server.py  test_retrieval.py  uninstall.py  validate_system.py  verify_mcp.py
storage/: FILES_CREATED.txt  IMPLEMENTATION_SUMMARY.md  README.md  SCHEMA_REFERENCE.md  __init__.py  bm25_index.py  chroma_store.py  example_usage.py  hybrid_retriever.py  metadata.py
tests/: __init__.py  conftest.py  test_chunking.py  test_integration.py  test_mcp_tools.py  test_storage.py
(+50 files in other folders)
